Fixed the layout problem on On Hire Process

--- a/public/styles/base.sass
+++ b/public/styles/base.sass
@@ -2062,12 +2062,14 @@ svg#Layer_1.bot-icon
         padding: .5rem
         margin: 0
       ul
-        @include display-flex()
+        @media screen and (min-width: $break-medium)
+          @include display-flex()
         margin: 0
         padding: 0
         list-style-type: none
         li
-          @include flex(1)
+          @media screen and (min-width: $break-medium)
+            @include flex(1)
           text-align: center
           margin: 0
           padding: 1rem
